# session-recorder

./: .env.docker  .gitignore  CLAUDE.md  README.md  build-audio-client.sh  build.sh  docker-build.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  schema.ts  start-dev-backend.sh  start-dev.sh  stop-dev.sh
.claude/: architecture.md  cost-guidelines.md  development.md  docker.md  instructions.md  preferences.md
client/: .env  .eslintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/: index.html
client/src/: App.vue  env.ts  main.ts
cpp/: Dockerfile
cpp/chunk-recorder/: AlsaAudioInput.h  AudioStreamManager.cpp  AudioStreamManager.h  CMakeLists.txt  params.h
cpp/chunk-sink-client/: AlsaAudioInput.cpp  AudioStreamManager.cpp  AudioStreamManager.h  CMakeLists.txt  README.md  ServiceTracker.cpp  ServiceTracker.h  chunk-sink-client.cpp  params.h
cpp/nubbock/: compositor.cpp  compositor.h  window.cpp
cpp/quenby/: .gitignore  main.cpp  mainwindow.cpp  webenginepage.cpp  webenginepage.h
go/: Dockerfile  Makefile  README.md  go.mod  go.sum  package.json
go/grpc/: chunksink-server.go  protocol-server.go  sessionsource-server.go
go/logger/: logger.go
go/mdns/: server.go  service-tracker.go
grpc-web-proxy/: Dockerfile  docker-compose.yml  envoy.dev.yaml  envoy.yaml
proto/: Makefile  audiosource.proto  package.json
protocols/: Dockerfile  Makefile  README.md  go.mod  package-lock.json  package.json
web/: .env  .env.development  .env.example  .eslintrc.base.json  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  project.json  tsconfig.app.json  tsconfig.base.json  vite.config.ts
(+250 files in other folders)
